--- a/assets/css/flaticon.css
+++ b/assets/css/flaticon.css
@@ -33,7 +33,7 @@
 .flaticon-squarespace-logo:before { content: "\f101"; }
 .flaticon-smug:before { content: "\f102"; }
 .flaticon-flickr-website-logo-silhouette:before { content: "\f103"; }
-.flaticon-linux-logo:before { content: "\f17c"; }
+.flaticon-linux-logo:before { content: "\f105"; }
 .flaticon-behance-logo:before { content: "\f105"; }
 .flaticon-dribbble:before { content: "\f106"; }
 .flaticon-themeforest:before { content: "\f107"; }
