--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -609,6 +609,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }
 .isotope .item {
     position:relative;
+    align-items:center;
     overflow:hidden;
     margin-bottom: 30px;
 }
