--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #4bd25f;}
     align-items: center;
     justify-content: center;
     position:relative;
-    background:url(../images/about/London.jpeg)no-repeat;
+    background:url(../images/about/london.jpg)no-repeat;
     background-size:cover;
     background-position: center;
     height:890px;
